cm7/emp-deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-webapp1
  labels:
    app: myapp1

spec:
  template:
    metadata:
      name: emp-pod1
      labels:
        app: myapp1
    spec:
      containers:
        - name: emp-cont1
          image: puneetsingh1/employee-img:4
          # command: ["python", "employee_server.py"]
          imagePullPolicy: Never ###
          ports:
            - containerPort: 8080 ## 
          volumeMounts:
            - name: employee-data
              mountPath: /app/data
      volumes:
        - name: employee-data
          persistentVolumeClaim:
            claimName: emp-pvc
          # hostPath:
          #   path: /data/empdata ## data would be persisted even without pvc

  replicas: 1
  selector:
    matchLabels:
      app: myapp1

---
apiVersion: v1
kind: Service
metadata:
  name: emp-svc1

spec:
  type: NodePort 
  ports: ##(array)
    - targetPort: 8080 
      protocol: TCP 
      port: 80 
      nodePort: 32567 ## 
      # name: http ## we can assign a name to the port as well (port naming)
  selector: ## imp as it connects to port of which pod.
    app: myapp1 ## from label
